--- a/NOTES.org
+++ b/NOTES.org
@@ -7,10 +7,14 @@
 #+title: Machine Performance Metrics: simple monitoring solution for Linux
 #+author: Lelanthran Manickum
 
-* [1/16] TASKLIST:
+* [2/18] TASKLIST:
  - [ ] (240m) javascript required:
 
  - [ ] (60m)  cosmetic crap (css):
+
+ - [X] (60m)  setup the test db with two users
+
+ - [ ] (30m)  Idempotency of db schema
 
  - [X] (60m)  user.php:
    user_session_load() => user_record if logged in, null if not
